modified routes, stations and segments relations mapping

--- a/bus/src/main/resources/application.yml
+++ b/bus/src/main/resources/application.yml
@@ -19,6 +19,6 @@ spring:
     password: 123
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
