--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  postgres:
+  postgres-bus:
     container_name: postgres-buses
     image: postgres
     environment:
@@ -14,6 +14,7 @@ services:
     networks:
       - bus-booking-network
     restart: unless-stopped
+
 networks:
   bus-booking-network:
     driver: bridge
