rename module bus-service to schedule-service, refactore properties

--- a/config-server/src/main/resources/configurations/schedule-service.yml
+++ b/config-server/src/main/resources/configurations/schedule-service.yml
@@ -8,12 +8,12 @@ server:
   port: 8090
 spring:
   application:
-    name: buses-service
+    name: schedule-service
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/buses
-    username: bus
-    password: 123
+    url: jdbc:postgresql://localhost:5432/schedule-db
+    username: postgres
+    password: postgres
   jpa:
     hibernate:
       ddl-auto: update
