--- a/config-server/src/main/resources/configurations/gateway.yml
+++ b/config-server/src/main/resources/configurations/gateway.yml
@@ -13,7 +13,7 @@ spring:
           enabled: true
           lower-case-service-id: true
       routes:
-        - id: buses-service
+        - id: schedule-service
           uri: http://localhost:8090
           predicates:
             - Path=/api/v1/buses/**
