--- a/schedule-service/src/main/resources/application.yml
+++ b/schedule-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   application:
-    name: buses-service
+    name: schedule-service
   config:
     import: optional:configserver:http://localhost:8888
