--- a/services/config-server/src/main/resources/configurations/bus-service.yml
+++ b/services/config-server/src/main/resources/configurations/bus-service.yml
@@ -13,11 +13,16 @@ spring:
     username: postgres
     password: 12345678
   jpa:
-    hibernate:
-      ddl-auto: update
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    baseline-description: "init"
+    baseline-version: 0
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
